--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container">
-        <nav>
+        <nav class="nav">
             <ul>
                 <li>Gmail</li>
                 <li>Images</li>
@@ -18,6 +18,9 @@
                 <li><i class="far fa-user-circle"></i></li>
             </ul>
         </nav>
+        <div class="logo">
+            <img src="images/googlelogo_color_272x92dp.png" alt="Google Logo">
+        </div>
         <div class="search-container">
             <form action="">
                 <input type="text" placeholder="Search.." id="search">
@@ -26,7 +29,7 @@
                 <button type="submit">Google Search</button>
                 <button type="submit">I'm Feeling Lucky</button>
             </form>
-            <p>Google offered in: <a href="#">Afrikaans</a> <a href="#">isiZulu</a> <a href="#">isiXhosa</a> <a href="#">Setswana</a> <a href="#">Northen Sotho</a></p>
+            <p class="languages">Google offered in: <a href="#">Afrikaans</a> <a href="#">isiZulu</a> <a href="#">isiXhosa</a> <a href="#">Setswana</a> <a href="#">Northen Sotho</a></p>
         </div>
         <div class="country">South Africa</div>
         <footer>
