--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <div class="container">
         <nav class="nav">
             <ul>
-                <li>Gmail</li>
-                <li>Images</li>
-                <li><i class="fas fa-bars"></i></li>
-                <li><i class="far fa-user-circle"></i></li>
+                <li><a href="#">Gmail</a></li>
+                <li><a href="#">Images</a></li>
+                <li class="icons"><i class="fas fa-bars"></i></li>
+                <li class="icons"><i class="far fa-user-circle"></i></li>
             </ul>
         </nav>
         <div class="logo">
@@ -27,11 +27,14 @@
         </div>
         <div class="search-container">
             <form action="">
-                <input type="text" placeholder="Search.." id="search">
-                <button type="submit"><i class="fas fa-search"></i></button>
+                <div class="search">
+                    <input type="text" placeholder="Search..">
+                </div>
                 <br>
-                <button type="submit">Google Search</button>
-                <button type="submit">I'm Feeling Lucky</button>
+                <div class="search-buttons">
+                    <button type="submit">Google Search</button>
+                    <button type="submit">I'm Feeling Lucky</button>
+                </div>  
             </form>
             <p class="languages">Google offered in: <a href="#">Afrikaans</a> <a href="#">isiZulu</a> <a href="#">isiXhosa</a> <a href="#">Setswana</a> <a href="#">Northen Sotho</a></p>
         </div>
@@ -43,7 +46,7 @@
                 <li><a href="#">Business</a></li>
                 <li><a href="#">How Search Works</a></li>
             </ul>
-            <p class="footer-center"><a href="#"><i class="fab fa-envira"></i>Carbon neutral since 2007</a></p>
+            <p class="footer-center"><a href="#"><i class="fab fa-envira"></i> Carbon neutral since 2007</a></p>
             <ul class="footer-right">
                 <li><a href="#">Piracy</a></li>
                 <li><a href="#">Terms</a></li>
